--- a/static/scss/cms/three-column-image-section.scss
+++ b/static/scss/cms/three-column-image-section.scss
@@ -6,8 +6,6 @@ html {
 
 .three-column-image-text-section {
 
-  padding-left: 15px;
-
   .section-row {
     .col-sm-4 {
       &:first-child {
